--- a/1.0 Qien.html
+++ b/1.0 Qien.html
@@ -4,10 +4,9 @@
     <style>
     </style>
     <script>
-
-
-
-
+        function klikMaar(){
+            alert("Je hebt geklikt");
+        }
 
     </script>
 
@@ -17,7 +16,7 @@
 <body>
     <h1>hallo</h1>
     <p> Zet hier maar een tekst neer.</p>
-    <input type=button value=klik maar>
+    <input type="button" value="klikmaar" onclick="klikMaar()">
 
 
 
