--- a/1.0 Qien.html
+++ b/1.0 Qien.html
@@ -4,8 +4,25 @@
     <style>
     </style>
     <script>
+        // procedureel programmeren
         function klikMaar(){
             alert("Je hebt geklikt");
+            var student1voornaam = "Johan";
+            var student1leeftijd = 25;
+            voorstellen(student1voornaam, student1leeftijd);
+        }
+        function voorstellen(voornaam, leeftijd){ // parameter
+            alert("Hallo, ik ben " + voornaam + " en ik ben " + leeftijd + " jaar oud.");
+        }
+        // Object georienteerd programmeren
+        function viaEenObject(){
+            var student1 = {};
+            student1.voornaam = "Fred";
+            student1.leeftijd = 45;
+            voorstellenViaObject(student1);
+        }
+        function voorstellenViaObject(student){
+            alert("Hello, I am " + student.voornaam + " and I am " + student.leeftijd + " years old.");
         }
 
     </script>
@@ -17,6 +34,7 @@
     <h1>hallo</h1>
     <p> Zet hier maar een tekst neer.</p>
     <input type="button" value="klikmaar" onclick="klikMaar()">
+    <input type="button" value="klik maar" onclick="viaEenObject()">
 
 
 
